[gd_scene load_steps=8 format=3 uid="uid://da355xfk6trdo"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Left_Bar/Parts/LeftBarBottomMapping.gd" id="1_1eg3c"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Buttons/TextButton_Element.gd" id="2_dtqim"]
[ext_resource type="Texture2D" uid="uid://lx5nndlrsglg" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Delete_S.png" id="3_wmdqc"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Buttons/TextureButton_Element.gd" id="3_xmo8e"]
[ext_resource type="Texture2D" uid="uid://cp8026cf16cte" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Delete_C.png" id="4_m58hk"]
[ext_resource type="Texture2D" uid="uid://wcrt5nk4neve" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Delete_H.png" id="5_shpep"]
[ext_resource type="Texture2D" uid="uid://t5wfu23syst3" path="res://Feagi-Godot-Interface/UI/Resources/Icons/Delete_D.png" id="6_bv1kt"]

[node name="LeftBarBottomMappingPrefab" type="HBoxContainer"]
script = ExtResource("1_1eg3c")

[node name="Cortical_ID" type="Button" parent="."]
layout_mode = 2
text = "NAME GO HERE"
script = ExtResource("2_dtqim")

[node name="Delete_Button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture_normal = ExtResource("3_wmdqc")
texture_pressed = ExtResource("4_m58hk")
texture_hover = ExtResource("5_shpep")
texture_disabled = ExtResource("6_bv1kt")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_xmo8e")

[connection signal="pressed" from="Cortical_ID" to="." method="_user_pressed_edit_button"]
[connection signal="pressed" from="Delete_Button" to="." method="_user_pressed_delete_button"]
